@@ -18,14 +18,12 @@ import org.springframework.transaction.annotation.Transactional;
 import java.security.Principal;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class MonthlyPlanCreator {
 
     private final ShiftRepository shiftRepository;
     private final MonthlyPlanRepository monthlyPlanRepository;
-    private final TeamRepository teamRepository;
     private final UserService userService;
     private final MonthlyWorkDetailsRepository monthlyWorkDetailsRepository;
     private final MonthlyWorkDetailsService monthlyWorkDetailsService;
@@ -36,7 +34,6 @@ public class MonthlyPlanCreator {
                               MonthlyWorkDetailsService monthlyWorkDetailsService) {
         this.shiftRepository = shiftRepository;
         this.monthlyPlanRepository = monthlyPlanRepository;
-        this.teamRepository = teamRepository;
         this.userService = userService;
         this.monthlyWorkDetailsRepository = monthlyWorkDetailsRepository;
         this.monthlyWorkDetailsService = monthlyWorkDetailsService;
@@ -58,7 +55,7 @@ public class MonthlyPlanCreator {
         Team team = user.getTeam();
         List<ShiftType> shiftTypes = team.getShiftTypes();
         List<User> users = userService.findByTeam(principal);
-        users = users.stream().filter(u -> u.getId() != user.getId()).collect(Collectors.toList());
+        users = users.stream().filter(u -> u.getId() != user.getId()).toList();
 
         // map to algorithm input
         AlgorithmMapper algorithmMapper = new AlgorithmMapper();
@@ -69,7 +66,6 @@ public class MonthlyPlanCreator {
                 users,
                 shiftTypes,
                 team.getRoles(),
-                team.getHardConstraints(),
                 team
         );
 
